--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.1.0",
+    "msw": "^1.0.1",
     "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "sort-package-json": "^2.2.0",
